# tick_counter

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: lib.rs
