[package]
name = "tick_counter"
version = "0.3.3"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Hardware-based tick counters for high-precision benchmarks"
documentation = "https://docs.rs/tick_counter"
readme = "README.md"
repository = "https://github.com/sheroz/tick_counter"
license = "MIT"
keywords = ["benchmark", "rdtsc", "rdtscp", "cntvct_el0", "cntfrq_el0"]
categories = ["development-tools", "hardware-support"]
